<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, TestActivity!</string>
    <string name="app_name">北京EOMS</string>
    <string name="user_name">欢迎登陆</string>
    <string name="msg_error_network_unavailable">无法连接网络，请设置网络。</string>
    <string name="msg_error_http_timeout">连接网络超时，请稍候重试。</string>
    <string name="text_max_length">输入字数最多为15个</string>
    <string name="template_btn_text">模版</string>
    <string name="gps_message">请开启GPS!!!</string>
    <string name="SD_isNO">请插入SD卡</string>
    <string name="arrive">到达</string>
    <string name="leave">离开</string>
    <string name="complete">完成</string>
    <string name="record">录音</string>
    <string name="recode_sucess">录音成功</string>
    <string name="recode_nostart">还未录音</string>
    <string name="recode_start">开始录音</string>
    <string name="recode_end">结束录音</string>
    <string name="photo">拍照</string>
    <string name="photo_nostart">还未拍照</string>
    <string name="photo_sucess">拍照成功</string>
    <string name="dialog_name">数据加载中...</string>
    <string name="dialog_upload_name">数据上传中...</string>
     <string name="dialog_upload_tude_name">经纬度上传中...</string>
    <string name="dialog_tude">正在获取经纬度...</string>
    <string name="gettude_failed">获取经纬度失败</string>
    <string name="upload_tude_success">上传经纬度成功</string>
    <string name="upload_tude_failed">上传经纬度失败</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_failed">上传失败</string>
    <string name="arrive_sure">请先确认到达，再开始其他操作!!!</string>
    <string name="gps_ope_failed">开启GPS失败，请重新点击到达获取GPS!!!</string>
    <string name="cancle">取消</string>
    <string name="sure">确定</string>
    <string name="information_proofread">资源信息校对</string>
    <string name="photo_category">拍照类别</string>
    <string name="sim_no">您的手机目前不能打电话,请检查您手机卡状态！</string>
    <string name="xj_list_id">计划编号：</string>
    <string name="xj_list_data">计划日期：</string>
    <string name="xj_list_completion">巡检完成率：</string>
    <string name="hidden">隐患</string>
    <string name="hidden_report">上报隐患</string>
    <string name="xj_complete">完成巡检</string>
    <string name="xj_begin">开始巡检</string>
    <string name="xj_stop">暂停巡检</string>
    <string name="xj_continue">继续巡检</string>
</resources>