<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:padding="15dip">
    <TextView
        android:id="@+id/line_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#535353"
        android:text="@string/xj_list_id"/>
    <TextView 
        android:id="@+id/line_id_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#535353"
        android:layout_toRightOf="@id/line_id_text"/>
    
    <TextView
        android:id="@+id/line_data_text"
        android:layout_below="@id/line_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#535353"
        android:text="@string/xj_list_data"/>
    <TextView 
        android:id="@+id/line_data_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#535353"
        android:layout_below="@id/line_id_name"
        android:layout_toRightOf="@id/line_data_text"/>
    
    <TextView
        android:id="@+id/line_completion_text"
        android:layout_below="@id/line_data_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#535353"
        android:text="@string/xj_list_completion"/>
    <TextView 
        android:id="@+id/line_completion_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#535353"
        android:layout_below="@id/line_data_name"
        android:layout_toRightOf="@id/line_completion_text"/>
    
    <ImageView 
	    android:id="@+id/img_arrow"
	    android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_centerVertical="true"
        android:src="@drawable/arrow"
        android:layout_alignParentRight="true"
	    />
    

</RelativeLayout>