<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_bg"
    android:orientation="horizontal" 
    
    >

    <LinearLayout
        android:id="@+id/start_lyt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:gravity="center"
        android:orientation="vertical"
		android:padding="10dip"
>

        <ImageView
            android:id="@+id/start_img"
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:src="@drawable/xj_start"
             />
        <TextView
            android:id="@+id/start_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xj_begin"/>
    </LinearLayout>    
 <LinearLayout
        android:id="@+id/complete_lyt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/complete_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_sendup" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xj_complete"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hidden_lyt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/hidden_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_sendup" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hidden_report"/>
    </LinearLayout>


</LinearLayout>